--- a/src/main/resources/assets/fsmm/lang/en_us.json
+++ b/src/main/resources/assets/fsmm/lang/en_us.json
@@ -1,4 +1,40 @@
 {
 	"itemGroup.fsmm": "FSMM - Fex's Small Money Mod",
-	"block.fsmm.atm":"Automated Teller Machine"
+	"block.fsmm.atm":"Automated Teller Machine",
+
+	"item.fsmm.1cent": "1 Cent",
+	"item.fsmm.2cent": "2 Cent",
+	"item.fsmm.5cent": "5 Cent",
+	"item.fsmm.10cent": "10 Cent",
+	"item.fsmm.20cent": "20 Cent",
+	"item.fsmm.50cent": "50 Cent",
+	"item.fsmm.1foney": "1 Foney",
+	"item.fsmm.2foney": "2 Foney",
+	"item.fsmm.5foney": "5 Foney",
+	"item.fsmm.10foney": "10 Foney",
+	"item.fsmm.20foney": "20 Foney",
+	"item.fsmm.50foney": "50 Foney",
+	"item.fsmm.100foney": "100 Foney",
+	"item.fsmm.200foney": "200 Foney",
+	"item.fsmm.500foney": "500 Foney",
+	"item.fsmm.1000foney": "1000 Foney",
+	"item.fsmm.2000foney": "2000 Foney",
+	"item.fsmm.5000foney": "5000 Foney",
+	"item.fsmm.10000foney": "10k Foney",
+	"item.fsmm.20000foney": "20k Foney",
+	"item.fsmm.50000foney": "50k Foney",
+	"item.fsmm.100kfoney": "100k Foney",
+	"item.fsmm.200kfoney": "200k Foney",
+	"item.fsmm.500kfoney": "500k Foney",
+
+	"ui.fsmm.atm_scroll_up": "&7Scroll Up",
+	"ui.fsmm.atm_scroll_down": "&7Scroll Down",
+	"ui.fsmm.atm_main.bank": "&7Bank Info &8/ &9 Change Bank",
+	"ui.fsmm.atm_main.transfers": "&bView Account Activity",
+	"ui.fsmm.atm_main.select": "&aChange &7managed &9Account",
+	"ui.fsmm.atm_main.withdraw": "&eWidthdraw &7from &9Account",
+	"ui.fsmm.atm_main.deposit": "&6Deposit &7to &9Account",
+	"ui.fsmm.atm_main.transfer": "&bTransfer &7to another &9Account",
+	"ui.fsmm.atm_withdraw": "&9Confirm &eWidthdraw",
+	"ui.fsmm.atm_deposit": "&9Confirm &6Deposit"
 }
